Fix delete button wrapping

--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -106,7 +106,7 @@
     text-align: center;
   }
   button.delete-button {
-    margin-right: 12px;
+    margin-right: 0;
     margin-top: 6px;
     order: 1;
   }
